--- a/src/templates/html/header.html
+++ b/src/templates/html/header.html
@@ -1,3 +1,7 @@
 {{define "header"}}
 <footer>Powered by <a href='https://golang.org/'>Go</a></footer>
+
+<a href='/login'>Login</a>
+<a href='/new_user'>Signup</a>
+<a href='/logout'>Logout</a>
 {{end}}
