--- a/src/templates/html/index.html
+++ b/src/templates/html/index.html
@@ -1,8 +1,8 @@
 {{template "base" .}}
 
-{{define "title"}}Home{{end}}
+{{define "title"}}SuperSet{{end}}
 
 {{define "main"}}
-<h2>Latest Snippets</h2>
-<p>There's nothing to see here yet!</p>
+<h1>SuperSet - разметка данных</h1>
+<p>Используйте наш сервис, чтобы разметить ваши данные и использовать их для обучения модели!</p>
 {{end}}
