--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -2,14 +2,22 @@
 <!doctype html>
 <html lang='en'>
     <head>
-        <meta charset='utf-8'>
-        <title>{{template "title" .}}</title>
-    </head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="/static/img/logo.png">
+    
+        <title>{{ template "title" . }}</title>
+    
+        <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/navbar-static/">
+    
+        <!-- Bootstrap core CSS -->
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/css/custom.css" rel="stylesheet">
+      </head>    
     <body>
         {{template "header" .}}
-        <nav>
-            <a href='/'>Home</a>
-        </nav>
         <main>
             {{template "main" .}}
         </main>
