--- a/src/templates/html/login.html
+++ b/src/templates/html/login.html
@@ -2,10 +2,17 @@
 
 {{define "title"}}Login{{end}}
 
-{{define "main"}}
-<form action="/login" method="POST">
-    <input name="Login">
-    <input name="Password" type="password">
-    <input type="submit">
-</form>
+{{define "main"}}    
+<!-- Custom styles for this template -->
+<form class="form-signin" action="/login" method="POST">
+    <h1 class="h3 mb-3 font-weight-normal">Пожалуйста авторизуйтесь</h1>
+    {{ if .InputError }}
+    <p>{{ .InputError }}</p>
+    {{end}}
+    <label for="inputEmail" class="sr-only">Login</label>
+    <input id="inputEmail" class="form-control" placeholder="Login" name="Login" required autofocus>
+    <label for="inputPassword" class="sr-only">Пароль</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="Password" required>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+  </form>
 {{end}}
