--- a/src/templates/html/header.html
+++ b/src/templates/html/header.html
@@ -8,6 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
     {{ if .UserName }}
     <a class="nav-link" href="/profile">{{.UserName}}</a>
+    <a class="nav-link" href="/new_project">Новый проект</a>
     <a class="nav-link" href="/logout"> Выйти  </a>
     {{ else }}
     <a class="nav-link nav-item" href="/login">Войти</a>
