Add task in tarantool processing

--- a/src/templates/html/new_project.html
+++ b/src/templates/html/new_project.html
@@ -12,7 +12,7 @@
     <input id="projectName" class="form-control" placeholder="Название проекта" name="projectName" required autofocus>
     <div>
       <input type="radio" id="ischemaChoice1"
-       name="ischema" value="Text">
+       name="ischema" value="PlainText">
       <label for="contactChoice1">Текст</label>
   
       <input type="radio" id="ischemaChoice2"
@@ -21,11 +21,11 @@
     </div>
     <div>
       <input type="radio" id="oschemaChoice1"
-       name="oschema" value="Text">
+       name="oschema" value="PlainText">
       <label for="contactChoice1">Текст</label>
   
       <input type="radio" id="oschemaChoice2"
-       name="oschema" value="Image">
+       name="oschema" value="ClassData">
       <label for="contactChoice2">Классы</label>
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Cоздать</button>
