--- a/src/templates/html/header.html
+++ b/src/templates/html/header.html
@@ -10,6 +10,7 @@
     <a class="nav-link" href="/profile">{{.UserName}}</a>
     <a class="nav-link" href="/new_project">Новый проект</a>
     <a class="nav-link" href="/upload">Загрузить данные</a>
+    <a class="nav-link" href="/start_label">Начать разметку</a>
     <a class="nav-link" href="/logout"> Выйти  </a>
     {{ else }}
     <a class="nav-link nav-item" href="/login">Войти</a>
