--- a/src/templates/html/new_project.html
+++ b/src/templates/html/new_project.html
@@ -13,21 +13,42 @@
     <div>
       <input type="radio" id="ischemaChoice1"
        name="ischema" value="PlainText">
-      <label for="contactChoice1">Текст</label>
+      <label for="ischemaChoice1">Текст</label>
   
       <input type="radio" id="ischemaChoice2"
        name="ischema" value="Image">
-      <label for="contactChoice2">Картинка</label>
+      <label for="ischemaChoice2">Картинка</label>
+
+      <input type="radio" id="ischemaChoice3"
+       name="ischema" value="TableData">
+      <label for="ischemaChoice3">Табличные данные</label>
+
     </div>
     <div>
       <input type="radio" id="oschemaChoice1"
        name="oschema" value="PlainText">
-      <label for="contactChoice1">Текст</label>
+      <label for="oschemaChoice1">Текст</label>
   
       <input type="radio" id="oschemaChoice2"
        name="oschema" value="ClassData">
-      <label for="contactChoice2">Классы</label>
+      <label for="oschemaChoice2">Классы</label>
+
+      <input type="radio" id="oschemaChoice3"
+      name="oschema" value="Integer">
+      <label for="oschemaChoice3">Целое</label>
+
+      <input type="radio" id="oschemaChoice4"
+      name="oschema" value="Integer">
+      <label for="oschemaChoice4">Вещественное</label>
     </div>
+<!--
+    <div>
+      <input type="classname" placeholder="Класс 1">
+      <input type="classname" placeholder="Класс 2">
+      <input type="classname" placeholder="Класс 3">
+      <button>+</button>
+    </div>
+  -->
     <button class="btn btn-lg btn-primary btn-block" type="submit">Cоздать</button>
   </form>
 {{end}}
