--- a/src/templates/html/upload.html
+++ b/src/templates/html/upload.html
@@ -3,6 +3,9 @@
 {{define "title"}}SuperSet{{end}}
 
 {{define "main"}}
+{{ if .Error }}
+<p>{{ .Error }} </p>
+{{ end }}
 <form action="/upload" method="POST" enctype="multipart/form-data" >
     <input name="projectName">
     <input type="file" name="dataFile" multiple/>
