--- a/src/templates/html/header.html
+++ b/src/templates/html/header.html
@@ -1,22 +1,34 @@
 {{define "header"}}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-    <img class="mr-4" src="/static/img/logo.png" alt="" width="64" height="64">
+    <img class="mr-4" src="/static/img/logo.png" alt="" width="72" height="72">
     <a class="navbar-brand" href="/">Главная</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
     {{ if .UserName }}
-    <a class="nav-link" href="/profile">{{.UserName}}</a>
-    <a class="nav-link" href="/new_project">Новый проект</a>
-    <a class="nav-link" href="/start_label">Начать разметку</a>
-    <a class="nav-link" href="/upload">Загрузить данные</a>
-    <a class="nav-link" href="/download">Выгрузить данные</a>
-    <a class="nav-link" href="/logout"> Выйти  </a>
-    {{ else }}
-    <a class="nav-link nav-item" href="/login">Войти</a>
-    <a class="nav-link nav-item" href="/new_user">Регистрация</a>
+    <a class="ml-4 navbar-brand" href="/new_project">Новый проект</a>
+    <a class="navbar-brand" href="/start_label">Начать разметку</a>
+    <a class="navbar-brand" href="/upload">Загрузить данные</a>
+    <a class="navbar-brand" href="/download">Выгрузить данные</a>
     {{ end }}
     </div>
+    <ul class="nav justify-content-end">
+        {{ if .UserName }}
+        <li class="nav-item">
+            <a class="navbar-brand" href="/profile">{{.UserName}}</a>
+        </li>
+        <li class="nav-item">
+            <a class="navbar-brand" href="/logout"> Выйти  </a>
+        </li>
+        {{ else }}
+        <li class="nav-item">
+            <a class="navbar-brand nav-item" href="/login">Войти</a>
+        </li>
+        <li class="nav-item">    
+            <a class="navbar-brand nav-item" href="/new_user">Регистрация</a>
+        </li>
+        {{ end }}
+    </ul>
 </nav>
 {{end}}
