--- a/src/templates/html/label.html
+++ b/src/templates/html/label.html
@@ -12,7 +12,7 @@
 {{ end}}
 
 {{ if eq .InputType "TableData"}}
-<table class="table form-signin">
+<table class="table">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -33,7 +33,7 @@
 {{ end }}
 
 {{ if eq .InputType "Image"}}
-<img width="400" height="400" src="/static/media/{{.ImgSrc}}" class="rounded mx-auto d-block">
+<img width="600" height="600" src="/static/media/{{.ImgSrc}}" class="rounded mx-auto d-block">
 {{ end }}
 
 <!-- Output data formating -->
@@ -56,7 +56,7 @@
 {{ end }}
 
 {{ if eq .OutputType "PlainText"}}
-<input class="mx-auto d-block" placeholder="Введите метку" name="TextData">
+<input class="form-control mx-auto d-block" placeholder="Введите метку" name="TextData">
 {{ end }}
 
 <input type="hidden" name="projectID" value="{{.ProjectID}}">
@@ -67,8 +67,10 @@
 </form>
 {{ else }}
 
-<h1>Извините у этого проекта не осталось не размеченных данных </h1> 
+<div class="form-signin">
+<h1 class="h3 mb-3 font-weight-normal">Извините у этого проекта не осталось не размеченных данных</h1>  
 <a class="btn btn-lg btn-primary btn-block" href="/start_label">Выбрать проекты</a>
 <a class="btn btn-lg btn-primary btn-block" href="/label?Projects={{.Projects}}">Обновить</a>
+</div>
 {{ end }}
 {{end}}
