add schema creation

--- a/src/templates/html/base.html
+++ b/src/templates/html/base.html
@@ -24,6 +24,6 @@
         <!-- Invoke the footer template -->
         {{template "footer" .}}
     </body>
-
+    <script src="/staic/js/new_project.js"></script>
 </html>
 {{end}}
