--- a/src/templates/html/label.html
+++ b/src/templates/html/label.html
@@ -12,7 +12,7 @@
 {{ end}}
 
 {{ if eq .InputType "TableData"}}
-<table class="table">
+<table class="label-image table">
     <thead>
       <tr>
         <th scope="col">#</th>
