--- a/src/templates/html/index.html
+++ b/src/templates/html/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="schema.png" alt="Card image cap">
+                <img class="card-img-top" src="/static/img/naida.png" alt="Card image cap">
                 <div class="card-body">
                   <p class="card-text">Настраивайте схему входных и выходных данных так, как это требует ваша задача!</p>
                   <div class="d-flex justify-content-between align-items-center">
